--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "**/bin": true,
         "**/obj": true,
         "tools": true,
-        "packages": true
+        "packages": true,
+        "Backup": true
     }
 }
